--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 </nav>
 
 <div class="jumbotron text-center">
-  <h1>Company</h1> 
+  <h1>Aikosh Personal Company</h1> 
   <p>We specialize in creating of wonderfull things!!!</p> 
   <form>
     <div class="input-group">
