--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <h3 class="margin">Кто Я?</h3>
   <p>Я такой то такой. Я путешественник. Люблю читать, рисовать, плавать и путешествовать. Люблю свою семью. </p>
   <a href="#" class="btn btn-default btn-lg">
-    <span class="glyphicon glyphicon-search"></span> Search
+    <span class="glyphicon glyphicon-search"></span> Поиск
   </a>
 </div>
 
