--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
 <!-- Footer -->
 <footer class="container-fluid bg-4 text-center">
-  <p>Bootstrap Theme Made By <a href="https://www.w3schools.com">www.w3schools.com</a></p> 
+  <p>Made By company A11 LLP <a href="">www.A11.com</a></p> 
 </footer>
 
 </body>
