--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
   <h3 class="margin">Кто Я?</h3>
-  <p>Я такой то такой. Я путешественник. Люблю читать, рисовать, плавать и путешествовать. Люблю свою семью. </p>
+  <p>Я путешественник. Люблю читать, рисовать, плавать и путешествовать. Люблю свою семью. </p>
   <a href="#" class="btn btn-default btn-lg">
     <span class="glyphicon glyphicon-search"></span> Поиск
   </a>
